# hs_handRobot_visionDetect

./: CMakeLists.txt  setup_nite.bash
scripts/: peopledetection.sh  vision_shutdown.sh  voice.sh  voice_shutdown.sh  voice_shutdown_order.sh
src/: hello.cpp  openni2_tracker.cpp  tracker.cpp  vision_detect.cpp
srv/: GetTrackState.srv
